# alfred-ente-auth

./: .gitignore  CHANGELOG.md  README.md  build.py  build.sh  build_deps.sh  info.plist  main.py  pyproject.toml  renovate.json5  requirements.in
.github/workflows/: alfred.yml
ente-totp/: info.plist  main.py
src/: constants.py  ente_auth.py  icon_downloader.py  models.py  secrets_manager.py  store_keychain.py  store_keyrings.py  totp_accounts_manager.py  utils.py
