[tool.poetry]
name = "alfred-ente-auth"
description = "A workflow that uses your Ente Exports"
authors = ["Bryan Jones <unix.chkpwd@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false
version = "2.0.0"

[tool.poetry.dependencies]
python = "^3.11"
pyotp = "^2.9.0"
keyring = "^25.5.0"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"

[tool.basedpyright]
typeCheckingMode = "standard"
