[tool.poetry]
name = "alfred-ente-auth"
description = "A workflow that uses your Ente Exports"
authors = ["Bryan Jones <unix.chkpwd@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false
version = "2.1.0"

[tool.poetry.dependencies]
python = "^3.11"
pyotp = "^2.9.0"
keyring = "^25.5.0"
simplepycons = "^1!13.18.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
extend-select = ["I"]
